# supernote-paperless-sync

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: release.yml
src/supernote_paperless_sync/: __init__.py  __main__.py  config.py  converter.py  db.py  inbound.py  ocr.py  outbound.py  paperless.py
